Region.getSubRegionsString for JSON serialization
Workaround for https://github.com/micronaut-projects/micronaut-serialization/issues/1187